// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GlobalSettingsViewPage should render correctly when entities exist 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-service-navigation"
    data-module="govuk-service-navigation"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-service-navigation__container"
      >
        <nav
          class="govuk-service-navigation__wrapper"
        >
          <ul
            class="govuk-service-navigation__list"
          >
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Services"
                href="/products/services"
              >
                Services
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Other Products"
                href="/products/otherProducts"
              >
                Other products
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Multi-operator products (internal)"
                href="/products/multiOperatorProducts"
              >
                Multi-operator products (internal)
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Exports"
                href="/products/exports"
              >
                Export your data
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Operator settings"
                href="/globalSettings"
              >
                Operator settings
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div />
      <div
        class="govuk-width-container"
        data-card-count="3"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-quarter"
          >
            <div
              class="app-pane__subnav"
            >
              <nav
                aria-labelledby="app-subnav-heading"
                class="app-subnav"
              >
                <h2
                  class="govuk-visually-hidden"
                  id="app-subnav-heading"
                >
                  Pages in this section
                </h2>
                <ul
                  class="app-subnav__section"
                >
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/globalSettings"
                    >
                      Settings overview
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPassengerTypes"
                    >
                      Passenger types
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPurchaseMethods"
                    >
                      Purchase methods
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewTimeRestrictions"
                    >
                      Time restrictions
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageFareDayEnd"
                    >
                      Fare day end
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewOperatorGroups"
                    >
                      Operator groups
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageOperatorDetails"
                    >
                      Operator details
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewCaps"
                    >
                      Caps
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="govuk-grid-column-three-quarters"
          >
            <h1
              class="govuk-heading-xl"
            >
              my title
            </h1>
            <p
              class="govuk-body govuk-!-margin-bottom-8"
            >
              my description
            </p>
            <div
              class="card-row"
            >
              <div
                class="card"
                id="7"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=7"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 7 name seven
                  </h1>
                </div>
              </div>
              <div
                class="card"
                id="17"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=17"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 17 name seventeen
                  </h1>
                </div>
              </div>
              <div
                class="card"
                id="1"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=1"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 1 another one
                  </h1>
                </div>
              </div>
            </div>
            <a
              class="govuk-button"
              data-module="govuk-button"
              href="/manageMyEntityDescription"
            >
              Add a my entity description
            </a>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`GlobalSettingsViewPage should render correctly when entities exist and env is not test 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-service-navigation"
    data-module="govuk-service-navigation"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-service-navigation__container"
      >
        <nav
          class="govuk-service-navigation__wrapper"
        >
          <ul
            class="govuk-service-navigation__list"
          >
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Services"
                href="/products/services"
              >
                Services
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Other Products"
                href="/products/otherProducts"
              >
                Other products
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Multi-operator products (internal)"
                href="/products/multiOperatorProducts"
              >
                Multi-operator products (internal)
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Exports"
                href="/products/exports"
              >
                Export your data
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Operator settings"
                href="/globalSettings"
              >
                Operator settings
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div />
      <div
        class="govuk-width-container"
        data-card-count="3"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-quarter"
          >
            <div
              class="app-pane__subnav"
            >
              <nav
                aria-labelledby="app-subnav-heading"
                class="app-subnav"
              >
                <h2
                  class="govuk-visually-hidden"
                  id="app-subnav-heading"
                >
                  Pages in this section
                </h2>
                <ul
                  class="app-subnav__section"
                >
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/globalSettings"
                    >
                      Settings overview
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPassengerTypes"
                    >
                      Passenger types
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPurchaseMethods"
                    >
                      Purchase methods
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewTimeRestrictions"
                    >
                      Time restrictions
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageFareDayEnd"
                    >
                      Fare day end
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewOperatorGroups"
                    >
                      Operator groups
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageOperatorDetails"
                    >
                      Operator details
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewCaps"
                    >
                      Caps
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="govuk-grid-column-three-quarters"
          >
            <h1
              class="govuk-heading-xl"
            >
              my title
            </h1>
            <p
              class="govuk-body govuk-!-margin-bottom-8"
            >
              my description
            </p>
            <div
              class="card-row"
            >
              <div
                class="card"
                id="7"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=7"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 7 name seven
                  </h1>
                </div>
              </div>
              <div
                class="card"
                id="17"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=17"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 17 name seventeen
                  </h1>
                </div>
              </div>
              <div
                class="card"
                id="1"
              >
                <div
                  class="card__body my-entity-description"
                >
                  <div
                    class="card__actions"
                  >
                    <ul
                      class="actions__list"
                    >
                      <li
                        class="actions__item"
                      >
                        <a
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular"
                          href="/manageMyEntityDescription?id=1"
                        >
                          Edit
                        </a>
                      </li>
                      <li
                        class="actions__item"
                      >
                        <button
                          class="govuk-link govuk-!-font-size-16 govuk-!-font-weight-regular actions__delete"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                  <h1>
                    This is my card body 1 another one
                  </h1>
                </div>
              </div>
            </div>
            <a
              class="govuk-button"
              data-module="govuk-button"
              href="/manageMyEntityDescription"
            >
              Add a my entity description
            </a>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`GlobalSettingsViewPage should render correctly when no entities 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-service-navigation"
    data-module="govuk-service-navigation"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-service-navigation__container"
      >
        <nav
          class="govuk-service-navigation__wrapper"
        >
          <ul
            class="govuk-service-navigation__list"
          >
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Services"
                href="/products/services"
              >
                Services
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Other Products"
                href="/products/otherProducts"
              >
                Other products
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Multi-operator products (internal)"
                href="/products/multiOperatorProducts"
              >
                Multi-operator products (internal)
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Exports"
                href="/products/exports"
              >
                Export your data
              </a>
            </li>
            <li
              class="govuk-service-navigation__item "
            >
              <a
                class="govuk-service-navigation__link"
                data-topnav="Operator settings"
                href="/globalSettings"
              >
                Operator settings
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div />
      <div
        class="govuk-width-container"
        data-card-count="0"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-quarter"
          >
            <div
              class="app-pane__subnav"
            >
              <nav
                aria-labelledby="app-subnav-heading"
                class="app-subnav"
              >
                <h2
                  class="govuk-visually-hidden"
                  id="app-subnav-heading"
                >
                  Pages in this section
                </h2>
                <ul
                  class="app-subnav__section"
                >
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/globalSettings"
                    >
                      Settings overview
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPassengerTypes"
                    >
                      Passenger types
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewPurchaseMethods"
                    >
                      Purchase methods
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewTimeRestrictions"
                    >
                      Time restrictions
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageFareDayEnd"
                    >
                      Fare day end
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewOperatorGroups"
                    >
                      Operator groups
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/manageOperatorDetails"
                    >
                      Operator details
                    </a>
                  </li>
                  <li
                    class="app-subnav__section-item"
                  >
                    <a
                      class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                      href="/viewCaps"
                    >
                      Caps
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            class="govuk-grid-column-three-quarters"
          >
            <h1
              class="govuk-heading-xl"
            >
              my title
            </h1>
            <p
              class="govuk-body govuk-!-margin-bottom-8"
            >
              my description
            </p>
            <div
              class="govuk-heading-m"
            >
              <p
                class="govuk-body"
              >
                <em>
                  You currently have no my entity descriptions saved.
                </em>
              </p>
              <a
                class="govuk-button"
                data-module="govuk-button"
                href="/manageMyEntityDescription"
              >
                Add a my entity description
              </a>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
